mejoras en el funcionamiento

--- a/admin.html
+++ b/admin.html
@@ -59,6 +59,10 @@
   </div>
 </div>
 
+<p id="mensaje-limite" style="text-align:center; margin-top:10px; font-weight:600; color:#007bff;">
+</p>
+
+
 
     <table id="tabla-productos">
       <thead>
